# CalypSSO

./: .eslintrc.json  .gitignore  .prettierignore  .yarnrc.yml  404.html  README.md  index.html  index.txt  next.config.mjs  openapi-ts.config.ts  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  tailwind.config.ts
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  release.yml
mail/: config.production.js  global.css  package.json  tailwind.config.js  tailwind.config.ts
mail/components/: button-card.html  card.html  copyright.html  divider.html  info-card.html
mail/emails/: account-activation.html  account-exist.html  account-invitation-required.html  account-invitation.html  account-merged.html  mail-migration-already-exist.html  mail-migration-confirmation.html  myeclpay-device-activation.html  myeclpay-structure-transfer.html  myeclpay-tos-signed.html  mypayment-device-activation.html  mypayment-structure-transfer.html  mypayment-tos-signed.html  reset-password-account-does-not-exist.html  reset-password.html
mail/layouts/: default.html  main.html
public/: variables.json
python/calypsso/: __init__.py  mail.py  web.py
src/api/: hyperionComponents.ts  hyperionContext.ts  hyperionFetcher.ts  hyperionSchemas.ts
src/app/: Background.tsx  globals.css  layout.tsx  providers.tsx
src/app/activate/: page.tsx
src/app/login/: page.tsx
src/hooks/: useAuthenticate.ts  useCreateAccount.ts  useRecoverPassword.ts
src/lib/: types.ts
web/: .env.template  next.config.mjs  package.json  tailwind.config.ts
(+75 files in other folders)
