[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CalypSSO"
dynamic = ["version"]
description = "FastAPI app to serve react webpages for Hyperion"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "AEECL ECLAIR" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
]
dependencies = ["fastapi>=0.110.1"]

[project.urls]
Source = "https://github.com/aeecleclair/CalypSSO"

[tool.hatch.version]
path = "python/calypsso/__about__.py"

[tool.hatch.build]
packages = ["python/calypsso"]

[tool.hatch.build.force-include]
# We want to mount the out directory inside the package folder
"out" = "python/calypsso/public"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
